--- a/src/marker_navigation/package.xml
+++ b/src/marker_navigation/package.xml
@@ -42,8 +42,10 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>ar_track_alvar</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>ar_track_alvar</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
